[gd_scene load_steps=8 format=3 uid="uid://bubvwabeual4b"]

[ext_resource type="Script" uid="uid://buxkfkjdadl3p" path="res://scenes/level.gd" id="1_mx8sn"]
[ext_resource type="Texture2D" uid="uid://ceqp3w3ibive8" path="res://kenney_space-shooter-redux/Backgrounds/black.png" id="1_w8frs"]
[ext_resource type="PackedScene" uid="uid://bu78nvi4d4h3t" path="res://scenes/player.tscn" id="2_mx8sn"]
[ext_resource type="PackedScene" uid="uid://2hnlwxpt277w" path="res://scenes/ui.tscn" id="4_mx8sn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8frs"]
size = Vector2(132, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mx8sn"]
size = Vector2(1279, 141.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppgk2"]
size = Vector2(1280, 119)

[node name="Level" type="Node2D"]
script = ExtResource("1_mx8sn")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(5, 2.8125)
texture = ExtResource("1_w8frs")
metadata/_edit_lock_ = true

[node name="Stars" type="Node2D" parent="."]

[node name="Lasers" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_mx8sn")]
position = Vector2(586, 531)

[node name="Borders" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="StaticBody2D2" type="StaticBody2D" parent="Borders"]
collision_layer = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D2"]
position = Vector2(1346, 360)
shape = SubResource("RectangleShape2D_w8frs")
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="Borders"]
collision_layer = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(-66, 360)
shape = SubResource("RectangleShape2D_w8frs")
metadata/_edit_lock_ = true

[node name="StaticBody2D3" type="StaticBody2D" parent="Borders"]
position = Vector2(0, -50)
collision_layer = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D3"]
position = Vector2(640, -20.875)
shape = SubResource("RectangleShape2D_mx8sn")
metadata/_edit_lock_ = true

[node name="StaticBody2D4" type="StaticBody2D" parent="Borders"]
position = Vector2(0, -100)
collision_layer = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D4"]
position = Vector2(640, 879.5)
shape = SubResource("RectangleShape2D_ppgk2")
metadata/_edit_lock_ = true

[node name="MeteorTimer" type="Timer" parent="."]
autostart = true

[node name="Meteors" type="Node2D" parent="."]

[node name="StarsTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UI" parent="." instance=ExtResource("4_mx8sn")]

[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="timeout" from="MeteorTimer" to="." method="_on_meteor_timer_timeout"]
[connection signal="timeout" from="StarsTimer" to="." method="_on_stars_timer_timeout"]
